--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -20,11 +20,7 @@ logging.level.com.maheshgaire.qaautomation=DEBUG
 logging.level.org.springframework.web=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 
-# CORS Configuration
-spring.webflux.cors.allowed-origins=http://localhost:4200,http://localhost:3000
-spring.webflux.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
-spring.webflux.cors.allowed-headers=*
-spring.webflux.cors.allow-credentials=true
+# CORS Configuration is handled in CorsConfig.java
 
 # Application Info
 info.app.name=QA Automation Service Hub
