feat: Implement FREE HuggingFace AI integration and UI cleanup
🚀 New Features:
- Add comprehensive FREE AI analysis system with HuggingFace integration
- Support for multiple AI providers: Mock (always free), Ollama (local), HuggingFace (free tier)
- Intelligent AI analysis with summary, recommendations, documentation, and pattern detection
- Enhanced test data generation with realistic relationships and patterns
- Clean, streamlined UI with improved user experience

🔧 Backend Changes:
- FreeAIConfig.java: Configuration for free AI providers
- AIAnalysisController.java: REST API endpoints for AI analysis (/api/v1/ai/*)
- AIAnalysisService.java: Core AI analysis engine with provider switching
- Enhanced AI models: AIAnalysisRequest/Response with structured insights
- EnhancedTestDataController.java: Advanced test data generation with JavaFaker
- Enhanced data models for users, products, orders with realistic relationships
- Updated application.properties with secure HuggingFace configuration (env var only)
- Updated pom.xml with AI and testing dependencies

🎨 Frontend Changes:
- Remove redundant Basic Test Data section for cleaner UI
- Remove AI Setup section to streamline interface
- Enhanced AI analysis interface with demo and data analysis
- Convert from 3-column to 2-column grid layout
- Improved user experience with focused functionality

🧪 AI Capabilities:
- Summary analysis with intelligent insights
- Actionable recommendations for test improvement
- Automated test documentation generation
- Pattern and anomaly detection in test data
- Graceful fallback to mock responses when API unavailable
- Support for custom analysis prompts and focus areas

📊 Technical Features:
- WebFlux reactive HTTP client for AI API calls
- Structured JSON responses with confidence scoring
- Performance metrics and processing time tracking
- Comprehensive error handling and fallback mechanisms
- Swagger/OpenAPI documentation for all endpoints

💰 Cost-Effective:
- All AI providers are 

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -27,3 +27,26 @@ info.app.name=QA Automation Service Hub
 info.app.description=Backend APIs for QA automation utilities
 info.app.version=1.0.0
 info.app.author=Mahesh Gaire
+
+# Free AI Configuration
+ai.service.provider=huggingface
+# Options: mock, ollama, huggingface, gemini
+# mock = No external calls, intelligent mock responses
+# ollama = Local Ollama server (completely free)
+# huggingface = Free tier API
+# gemini = Google's free tier
+
+# Ollama Configuration (Local AI - completely free)
+ai.ollama.base-url=http://localhost:11434
+ai.ollama.model=llama2
+ai.ollama.timeout=30000
+
+# Hugging Face Configuration (Free tier)
+ai.huggingface.api-key=${HF_API_KEY:demo-mode}
+ai.huggingface.model=microsoft/DialoGPT-medium
+ai.huggingface.base-url=https://api-inference.huggingface.co
+
+# AI Analysis Settings
+ai.max-tokens=1000
+ai.temperature=0.7
+ai.mock-responses=true
