--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -67,6 +67,13 @@
             <scope>test</scope>
         </dependency>
         
+        <!-- JavaFaker for realistic test data generation -->
+        <dependency>
+            <groupId>net.datafaker</groupId>
+            <artifactId>datafaker</artifactId>
+            <version>2.0.2</version>
+        </dependency>
+        
         <!-- Cucumber for BDD Tests -->
         <dependency>
             <groupId>io.cucumber</groupId>
