feat: Complete MCP integration with comprehensive user guide and enhanced UI
🔗 Major Features Added:
- Full Model Context Protocol (MCP) implementation with JSON-RPC 2.0 compliance
- 5 powerful MCP tools: generate_test_data, analyze_with_ai, validate_test_data, run_performance_test, generate_test_report
- 4 intelligent MCP prompts: analyze_test_results, document_test_case, optimize_test_suite, create_bug_report
- Live MCP resources for real-time access to test data and reports

🎯 Enhanced User Experience:
- Comprehensive interactive user guide with step-by-step tutorials
- MCP-powered Enhanced Test Data Generation with multiple formats (JSON, CSV, XML)
- MCP-powered AI Analysis with multiple providers (Mock, HuggingFace, Ollama)
- Dark theme results display with high contrast for optimal readability
- Real-time feedback and visual progress indicators
- Fixed demo data display issues for proper JSON structure access

🚀 Technical Improvements:
- QAAutomationMCPServer with complete protocol implementation
- MCPController with both REST API and JSON-RPC endpoints
- Enhanced test data service integration with MCP tools
- Unified workflow across all features via MCP protocol
- Production-ready enterprise integration capabilities

📖 Documentation Updates:
- Updated README with comprehensive feature descriptions
- Added MCP integration examples for Claude and other AI tools
- Enhanced project overview with user guide features
- Updated tech stack and capabilities documentation

This establishes the QA Automation Service Hub as the industry-first QA platform with native MCP support, providing seamless AI tool integration and professional user experience.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -50,3 +50,24 @@ ai.huggingface.base-url=https://api-inference.huggingface.co
 ai.max-tokens=1000
 ai.temperature=0.7
 ai.mock-responses=true
+
+# MCP (Model Context Protocol) Configuration
+mcp.enabled=true
+mcp.server.name=qa-automation-hub
+mcp.server.version=1.0.0
+mcp.server.description=QA Automation Service Hub with AI-powered testing capabilities
+mcp.tools.enabled=true
+mcp.resources.enabled=true
+mcp.prompts.enabled=true
+
+# MCP Tool Configuration
+mcp.tools.test-data-generation.enabled=true
+mcp.tools.ai-analysis.enabled=true
+mcp.tools.test-execution.enabled=true
+mcp.tools.performance-testing.enabled=true
+
+# MCP Resource Configuration
+mcp.resources.test-cases.path=/test-cases
+mcp.resources.test-data.path=/test-data
+mcp.resources.reports.path=/reports
+mcp.resources.metrics.path=/metrics
