fix: Resolve Railway CI/CD project linking issue
- Added RAILWAY_PROJECT_ID requirement for proper project linking
- Updated workflow to link project before deployment
- Enhanced GITHUB_SECRETS_SETUP.md with project ID instructions
- Created alternative GitHub integration workflow as backup
- Fixed 'Project Token not found' error by properly linking Railway project

Required GitHub Secrets:
1. RAILWAY_TOKEN - Railway API token
2. RAILWAY_PROJECT_ID - Railway project ID (from dashboard URL)
3. HF_API_KEY - HuggingFace token (optional)

Alternative: Use Railway's direct GitHub integration for simpler setup.

--- a/.github/workflows/deploy-railway.yml
+++ b/.github/workflows/deploy-railway.yml
@@ -24,17 +24,17 @@ jobs:
         
     - name: Deploy to Railway
       run: |
-        # Set Railway token as environment variable
-        export RAILWAY_TOKEN="${{ secrets.RAILWAY_TOKEN }}"
+        # Link to existing project using project ID
+        railway link ${{ secrets.RAILWAY_PROJECT_ID }}
+        
+        # Set environment variables first
+        railway variables --set "SPRING_PROFILES_ACTIVE=production" --skip-deploys
+        railway variables --set "SERVER_PORT=8080" --skip-deploys  
+        railway variables --set "HF_API_KEY=${{ secrets.HF_API_KEY || 'demo-mode' }}" --skip-deploys
+        railway variables --set "RAILWAY_ENVIRONMENT=production" --skip-deploys
         
         # Deploy the application
         railway up --detach
-        
-        # Set environment variables
-        railway variables --set "SPRING_PROFILES_ACTIVE=production" --skip-deploys
-        railway variables --set "SERVER_PORT=8080" --skip-deploys
-        railway variables --set "HF_API_KEY=${{ secrets.HF_API_KEY }}" --skip-deploys
-        railway variables --set "RAILWAY_ENVIRONMENT=production"
       env:
         RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
         
@@ -46,6 +46,7 @@ jobs:
         echo ""
         echo "Required GitHub Secrets:"
         echo "- RAILWAY_TOKEN: Your Railway API token"
+        echo "- RAILWAY_PROJECT_ID: Your Railway project ID"
         echo "- HF_API_KEY: Your HuggingFace API key (optional, defaults to demo-mode)"
       env:
         RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
