--- a/.github/workflows/deploy-railway.yml
+++ b/.github/workflows/deploy-railway.yml
@@ -7,46 +7,33 @@ on:
 
 jobs:
   deploy:
-    name: Deploy to Railway
+    name: Railway Deployment Status
     runs-on: ubuntu-latest
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
       
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '18'
-        
-    - name: Install Railway CLI
-      run: npm install -g @railway/cli
-        
-    - name: Deploy to Railway
+    - name: Railway Deployment Info
       run: |
-        # Link to existing project using project ID
-        railway link ${{ secrets.RAILWAY_PROJECT_ID }}
-        
-        # Set environment variables first
-        railway variables --set "SPRING_PROFILES_ACTIVE=production" --skip-deploys
-        railway variables --set "SERVER_PORT=8080" --skip-deploys  
-        railway variables --set "HF_API_KEY=${{ secrets.HF_API_KEY || 'demo-mode' }}" --skip-deploys
-        railway variables --set "RAILWAY_ENVIRONMENT=production" --skip-deploys
-        
-        # Deploy the application
-        railway up --detach
-      env:
-        RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
-        
-    - name: Deployment Status
-      run: |
-        echo "✅ Deployment initiated successfully!"
-        echo "🔗 Check your Railway dashboard: https://railway.app/dashboard"
-        echo "⏳ Deployment may take 2-5 minutes to complete"
+        echo "🚀 Railway Deployment via GitHub Integration"
+        echo "==========================================="
         echo ""
-        echo "Required GitHub Secrets:"
-        echo "- RAILWAY_TOKEN: Your Railway API token"
-        echo "- RAILWAY_PROJECT_ID: Your Railway project ID"
-        echo "- HF_API_KEY: Your HuggingFace API key (optional, defaults to demo-mode)"
-      env:
-        RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+        echo "✅ Deployment Status: ACTIVE via Railway GitHub Integration"
+        echo ""
+        echo "Your QA Automation Service Hub is automatically deployed to Railway!"
+        echo "Every push to main branch triggers an automatic deployment."
+        echo ""
+        echo "Environment variables configured in Railway dashboard:"
+        echo "   - SPRING_PROFILES_ACTIVE=production"
+        echo "   - SERVER_PORT=8080"
+        echo "   - HF_API_KEY=demo-mode"
+        echo ""
+        echo "This deployment method provides:"
+        echo "✅ Automatic deployments on git push"
+        echo "✅ No need for GitHub secrets"
+        echo "✅ Full Railway dashboard integration"
+        echo "✅ Easy environment variable management"
+        echo ""
+        echo "Your Railway project: passionate-communication"
+        echo "Project URL: https://railway.app/project/12816f9a-0e5d-4c09-8424-054bdea640bc"
