--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,9 +7,8 @@ on:
     branches: [ main ]
 
 env:
-  REGISTRY: docker.io
-  IMAGE_NAME_BACKEND: maheshgaire/qa-automation-backend
-  IMAGE_NAME_FRONTEND: maheshgaire/qa-automation-frontend
+  NODE_VERSION: '18'
+  JAVA_VERSION: '17'
 
 jobs:
   test:
@@ -50,8 +49,8 @@ jobs:
         name: test-results
         path: backend/target/surefire-reports/
 
-  build-and-push:
-    name: Build and Push Docker Images
+  build-test:
+    name: Build and Test Docker Images  
     runs-on: ubuntu-latest
     needs: test
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
@@ -62,54 +61,24 @@ jobs:
       
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
-      
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
         
-    - name: Extract metadata for backend
-      id: meta-backend
-      uses: docker/metadata-action@v5
-      with:
-        images: ${{ env.IMAGE_NAME_BACKEND }}
-        tags: |
-          type=ref,event=branch
-          type=ref,event=pr
-          type=sha,prefix={{branch}}-
-          type=raw,value=latest,enable={{is_default_branch}}
-          
-    - name: Extract metadata for frontend
-      id: meta-frontend
-      uses: docker/metadata-action@v5
-      with:
-        images: ${{ env.IMAGE_NAME_FRONTEND }}
-        tags: |
-          type=ref,event=branch
-          type=ref,event=pr
-          type=sha,prefix={{branch}}-
-          type=raw,value=latest,enable={{is_default_branch}}
-          
-    - name: Build and push backend image
+    - name: Build backend image (test only)
       uses: docker/build-push-action@v5
       with:
         context: .
         file: ./Dockerfile.backend
-        push: true
-        tags: ${{ steps.meta-backend.outputs.tags }}
-        labels: ${{ steps.meta-backend.outputs.labels }}
+        push: false
+        tags: qa-automation-backend:test
         cache-from: type=gha
         cache-to: type=gha,mode=max
         
-    - name: Build and push frontend image
+    - name: Build frontend image (test only)
       uses: docker/build-push-action@v5
       with:
         context: .
         file: ./Dockerfile.frontend
-        push: true
-        tags: ${{ steps.meta-frontend.outputs.tags }}
-        labels: ${{ steps.meta-frontend.outputs.labels }}
+        push: false
+        tags: qa-automation-frontend:test
         cache-from: type=gha
         cache-to: type=gha,mode=max
 
