🔧 Fix Railway deployment and CI/CD pipeline
✅ Fixed Railway deployment issues:
- Updated frontend API URLs from localhost to environment-aware configuration
- Modified Dockerfile.backend to include frontend static files (single-service architecture)
- Fixed CI/CD pipeline to build unified Docker image
- Updated security scanning and deployment monitoring

✅ Key improvements:
- Single-service deployment (backend serves both API and static files)
- Environment-aware API configuration (localhost for dev, same-origin for production)
- Simplified Docker build process
- Updated CI/CD pipeline to match new architecture
- Added deployment and fix documentation

✅ Files modified:
- frontend/src/test-dashboard.html: Dynamic API URL detection
- Dockerfile.backend: Include frontend files in build
- .github/workflows/ci-cd.yml: Updated for single-service architecture
- .github/workflows/deploy-railway.yml: Updated deployment info
- railway.toml: Simplified configuration

This should resolve the Railway deployment issues and make the dashboard functional.

--- a/.github/workflows/deploy-railway.yml
+++ b/.github/workflows/deploy-railway.yml
@@ -20,20 +20,34 @@ jobs:
         echo "==========================================="
         echo ""
         echo "✅ Deployment Status: ACTIVE via Railway GitHub Integration"
+        echo "✅ Architecture: Single-service (Backend + Frontend static files)"
+        echo "✅ Docker: Uses Dockerfile.backend (includes frontend files)"
         echo ""
         echo "Your QA Automation Service Hub is automatically deployed to Railway!"
         echo "Every push to main branch triggers an automatic deployment."
+        echo ""
+        echo "🌐 Live URLs:"
+        echo "   Dashboard: https://passionate-communication-production-da98.up.railway.app/test-dashboard.html"
+        echo "   Health Check: https://passionate-communication-production-da98.up.railway.app/actuator/health"
+        echo "   API Base: https://passionate-communication-production-da98.up.railway.app/api/v1/"
         echo ""
         echo "Environment variables configured in Railway dashboard:"
         echo "   - SPRING_PROFILES_ACTIVE=production"
         echo "   - SERVER_PORT=8080"
         echo "   - HF_API_KEY=demo-mode"
         echo ""
+        echo "✅ Recent Fixes Applied:"
+        echo "   ✅ Fixed API URL configuration (no more localhost issues)"
+        echo "   ✅ Single Docker image includes both backend and frontend"
+        echo "   ✅ Environment-aware configuration"
+        echo "   ✅ CORS properly configured for Railway domains"
+        echo ""
         echo "This deployment method provides:"
         echo "✅ Automatic deployments on git push"
         echo "✅ No need for GitHub secrets"
         echo "✅ Full Railway dashboard integration"
         echo "✅ Easy environment variable management"
+        echo "✅ Simplified single-service architecture"
         echo ""
         echo "Your Railway project: passionate-communication"
         echo "Project URL: https://railway.app/project/12816f9a-0e5d-4c09-8424-054bdea640bc"
