--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -13,6 +13,9 @@ RUN mvn dependency:go-offline -B
 # Copy source code
 COPY backend/src ./src
 
+# Copy frontend static files to be served by Spring Boot
+COPY frontend/src ./src/main/resources/static/
+
 # Build the application
 RUN mvn clean package -DskipTests -B
 
