--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -45,27 +45,14 @@ server {
         add_header Cache-Control "public, immutable";
     }
     
-    # Handle API proxy to backend
-    location /api/ {
-        proxy_pass http://backend:8080;
-        proxy_set_header Host \$host;
-        proxy_set_header X-Real-IP \$remote_addr;
-        proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto \$scheme;
-    }
-    
-    # Handle actuator endpoints
-    location /actuator/ {
-        proxy_pass http://backend:8080;
-        proxy_set_header Host \$host;
-        proxy_set_header X-Real-IP \$remote_addr;
-        proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto \$scheme;
-    }
-    
-    # SPA fallback
+    # Serve static files
     location / {
         try_files \$uri \$uri/ /test-dashboard.html;
+    }
+    
+    # Default route to test dashboard
+    location = / {
+        return 301 /test-dashboard.html;
     }
 }
 EOF
