--- a/railway.toml
+++ b/railway.toml
@@ -1,4 +1,5 @@
 # Railway.app deployment configuration for QA Automation Service Hub
+# Single service configuration (Backend + Frontend static files)
 
 [build]
 builder = "DOCKERFILE"
@@ -15,4 +16,3 @@ restartPolicyMaxRetries = 10
 # HF_API_KEY=your-huggingface-api-key
 # SPRING_PROFILES_ACTIVE=production
 # SERVER_PORT=8080
-# RAILWAY_STATIC_URL=https://your-frontend-url.railway.app
