🔧 Refactor to proper two-service architecture
✅ Separated frontend and backend services:
- Backend: Pure API service (Spring Boot) - serves /api/* and /actuator/*
- Frontend: Static file service (nginx) - serves HTML/CSS/JS

✅ Changes made:
- Removed WebConfig conflicts from backend
- Reverted Dockerfile.backend to not include frontend files
- Updated frontend to call backend service URL
- Added environment variable injection for BACKEND_URL
- Created separate Railway service configurations

✅ Deployment approach:
- Deploy backend service using Dockerfile.backend
- Deploy frontend service using Dockerfile.frontend
- Configure environment variables for cross-service communication

This follows proper microservices architecture with clear separation of concerns.

--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -60,6 +60,13 @@ EOF
 # Copy static files from builder
 COPY frontend/src/ /usr/share/nginx/html/
 
+# Create a script to inject environment variables into JavaScript
+RUN echo '#!/bin/sh' > /docker-entrypoint.d/30-inject-backend-url.sh && \
+    echo 'if [ -n "$BACKEND_URL" ]; then' >> /docker-entrypoint.d/30-inject-backend-url.sh && \
+    echo '  sed -i "s|https://qa-automation-backend-production.railway.app|$BACKEND_URL|g" /usr/share/nginx/html/test-dashboard.html' >> /docker-entrypoint.d/30-inject-backend-url.sh && \
+    echo 'fi' >> /docker-entrypoint.d/30-inject-backend-url.sh && \
+    chmod +x /docker-entrypoint.d/30-inject-backend-url.sh
+
 # Create nginx user and fix permissions
 RUN addgroup -g 1001 nginxgroup && \
     adduser -u 1001 -G nginxgroup -s /bin/sh -D nginxuser
